feat: coach IA en tiempo real - guia serie por serie como entrenador presencial
Backend EntrenadorService - feedback-serie ahora llama a OpenAI con prompt de
entrenador de elite que:

1. EVALUA cada serie: peso, reps, RPE vs objetivo
2. COACHING DE TECNICA: tip de postura especifico al ejercicio
   (donde debe quemar, posicion de codos, velocidad del movimiento,
   error comun a evitar)
3. CLASIFICA siguiente serie:
   - aproximacion: todavia calentando, subir peso
   - trabajo: peso objetivo, rango completo
   - tope: maximo esfuerzo con buena tecnica
   - descarga: bajar peso, buscar bombeo mente-musculo
4. AJUSTE DINAMICO: sube/baja peso segun RPE y reps logradas
5. MOTIVACION: frase directa, tipo entrenador real

Respuesta JSON incluye:
- feedback, coaching_tip, tipo_siguiente_serie,
  ajuste_siguiente_serie, motivacion, alerta

Frontend ActiveWorkout - feedback enriquecido con:
- Cajita de feedback principal con color (green/yellow/red)
- Tip de tecnica con icono de target y borde amarillo
- Badge de tipo de serie (aproximacion/trabajo/tope/descarga)
  con colores distintos + peso sugerido
- Frase motivacional en rojo cursiva

resumenSesion tambien ahora llama a OpenAI para evaluacion real.

https://claude.ai/code/session_018tHaw8Up2yaJybv1mf1HsK